// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTemplateInner renders 1`] = `
<EuiPageTemplate
  className="kbnPageTemplate"
  solutionNav={
    Object {
      "isOpenOnDesktop": false,
      "isOpenOnMobile": false,
      "items": Array [
        Object {
          "id": "1",
          "items": Array [
            Object {
              "id": "1.1",
              "name": "Ingest Node Pipelines",
            },
            Object {
              "id": "1.2",
              "name": "Logstash Pipelines",
            },
            Object {
              "id": "1.3",
              "name": "Beats Central Management",
            },
          ],
          "name": "Ingest",
        },
        Object {
          "id": "2",
          "items": Array [
            Object {
              "id": "2.1",
              "name": "Index Management",
            },
            Object {
              "id": "2.2",
              "name": "Index Lifecycle Policies",
            },
            Object {
              "id": "2.3",
              "name": "Snapshot and Restore",
            },
          ],
          "name": "Data",
        },
      ],
      "name": "Kibana",
    }
  }
/>
`;

exports[`PageTemplateInner renders empty & page header & children 1`] = `
<KibanaPageTemplateInner
  isEmptyState={true}
  pageHeader={
    Object {
      "aria-label": "test-aria-label",
      "className": "test-className",
      "data-test-subj": "test-data-subj",
    }
  }
  solutionNav={
    Object {
      "isOpenOnDesktop": false,
      "isOpenOnMobile": false,
      "items": Array [
        Object {
          "id": "1",
          "items": Array [
            Object {
              "id": "1.1",
              "name": "Ingest Node Pipelines",
            },
            Object {
              "id": "1.2",
              "name": "Logstash Pipelines",
            },
            Object {
              "id": "1.3",
              "name": "Beats Central Management",
            },
          ],
          "name": "Ingest",
        },
        Object {
          "id": "2",
          "items": Array [
            Object {
              "id": "2.1",
              "name": "Index Management",
            },
            Object {
              "id": "2.2",
              "name": "Index Lifecycle Policies",
            },
            Object {
              "id": "2.3",
              "name": "Snapshot and Restore",
            },
          ],
          "name": "Data",
        },
      ],
      "name": "Kibana",
    }
  }
>
  <div>
    Child component
  </div>
</KibanaPageTemplateInner>
`;

exports[`PageTemplateInner renders empty & page header 1`] = `
<KibanaPageTemplateInner
  isEmptyState={true}
  pageHeader={
    Object {
      "aria-label": "test-aria-label",
      "className": "test-className",
      "data-test-subj": "test-data-subj",
    }
  }
  solutionNav={
    Object {
      "isOpenOnDesktop": false,
      "isOpenOnMobile": false,
      "items": Array [
        Object {
          "id": "1",
          "items": Array [
            Object {
              "id": "1.1",
              "name": "Ingest Node Pipelines",
            },
            Object {
              "id": "1.2",
              "name": "Logstash Pipelines",
            },
            Object {
              "id": "1.3",
              "name": "Beats Central Management",
            },
          ],
          "name": "Ingest",
        },
        Object {
          "id": "2",
          "items": Array [
            Object {
              "id": "2.1",
              "name": "Index Management",
            },
            Object {
              "id": "2.2",
              "name": "Index Lifecycle Policies",
            },
            Object {
              "id": "2.3",
              "name": "Snapshot and Restore",
            },
          ],
          "name": "Data",
        },
      ],
      "name": "Kibana",
    }
  }
/>
`;

exports[`PageTemplateInner renders empty 1`] = `
<EuiPageTemplate
  className="kbnPageTemplate kbnPageTemplate--centeredBody"
  solutionNav={
    Object {
      "isOpenOnDesktop": false,
      "isOpenOnMobile": false,
      "items": Array [
        Object {
          "id": "1",
          "items": Array [
            Object {
              "id": "1.1",
              "name": "Ingest Node Pipelines",
            },
            Object {
              "id": "1.2",
              "name": "Logstash Pipelines",
            },
            Object {
              "id": "1.3",
              "name": "Beats Central Management",
            },
          ],
          "name": "Ingest",
        },
        Object {
          "id": "2",
          "items": Array [
            Object {
              "id": "2.1",
              "name": "Index Management",
            },
            Object {
              "id": "2.2",
              "name": "Index Lifecycle Policies",
            },
            Object {
              "id": "2.3",
              "name": "Snapshot and Restore",
            },
          ],
          "name": "Data",
        },
      ],
      "name": "Kibana",
    }
  }
  template="centeredBody"
/>
`;
